# ligiaroupas-django

./: .env  db.sqlite3  ligiaroupas.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
ligiaroupas/: admin.py  apps.py
ligiaroupas/migrations/: 0001_initial.py  0002_alter_usuario_cpf.py  0002_compra.py  0002_initial.py  0002_item_nome.py  0003_item_capa.py  0003_itenscompra.py  0003_rename_item_produto_alter_produto_options.py  0004_rename_item_itenscompra_produto_and_more.py
ligiaroupas/models/: __init__.py  categoria.py  compras.py  cor.py  item.py  marca.py  produto.py  tamanho.py
ligiaroupas/serializers/: __init__.py  categoria.py  compras.py  cor.py  item.py  marca.py  mytoken.py  produto.py  tamanho.py
ligiaroupas/views/: __init__.py  categoria.py  compra.py  cor.py  item.py  marca.py  produto.py  tamanho.py
uploader/migrations/: 0001_initial.py
usuario/: models.py
usuario/migrations/: 0001_initial.py
