[tool.pdm]
[tool.pdm.scripts]
dev = "python manage.py runserver"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "joao gabriel", email = "zala4453523@gmail.com"},
]
dependencies = [
    "django==4.1",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=67.8.0",
    "python-magic>=0.4.27",
    "Pillow>=9.5.0",
    "drf-spectacular>=0.26.2",
    "django-environ>=0.10.0",
    "mysqlclient>=2.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
